path + api login vrs 1.0.1

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,8 +23,8 @@
       <label>
         <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
       </label>
-      <span th:text="${login.nome}"></span>  
-      <!--  <span th:text="${sucesso}"></span> --> 
+       <!--  <span th:text="${login.nome}"></span> -->    
+        <span th:text="${sucesso}"></span>
       <div class="clearfix">
         <button type="button" class="cancelbtn">Cancel</button>
         <button type="submit" class="signupbtn">Sign Up</button>
