--- a/src/main/resources/templates/login/cadastro.html
+++ b/src/main/resources/templates/login/cadastro.html
@@ -9,7 +9,7 @@
  <body> 
 
   <h1>Tela de Cadastro de Usuário</h1>
-  <form action="/cadastrologin" method="post">
+  <form action="/cadastroLogin" method="post">
     <label><b>Nome Completo</b></label>
     <input type="text" placeholder="Enter Nome" name="nome" required>
 
